@@ -1,3 +1,4 @@
+* Use a sequence of ids, values to set fields
 * Client side actions on button and wizard
 * Add depends attribute to data tag
 * Add tree_invisible attribute to button in tree view
